@@ -3079,11 +3079,13 @@ static int _copypercent_disp(struct dm_report *rh,
 	dm_percent_t percent = DM_PERCENT_INVALID;
 
 	/* TODO: just cache passes through lvseg_percent... */
-	if (lv_is_cache(lv) || lv_is_used_cache_pool(lv))
+	if (lv_is_cache(lv) || lv_is_used_cache_pool(lv) ||
+	    (!lv_is_merging_origin(lv) && lv_is_raid(lv) && !seg_is_any_raid0(first_seg(lv))))
 		percent = lvseg_percent_with_info_and_seg_status(lvdm, PERCENT_GET_DIRTY);
-	else if (((lv_is_raid(lv) && !seg_is_any_raid0(first_seg(lv)) &&
-		   lv_raid_percent(lv, &percent)) ||
-		  (lv_is_mirror(lv) &&
+	else if (lv_is_raid(lv) && !seg_is_any_raid0(first_seg(lv)))
+		/* old way for percentage when merging snapshot into raid origin */
+		(void) lv_raid_percent(lv, &percent);
+	else if (((lv_is_mirror(lv) &&
 		   lv_mirror_percent(lv->vg->cmd, lv, 0, &percent, NULL))) &&
 		 (percent != DM_PERCENT_INVALID))
 		percent = copy_percent(lv);
